@@ -8,6 +8,10 @@ binary release:
 ----------------------
 * Set jetty.logs to get CCDIR/logs. This prevents a Jetty error when you run CC from a somewhere other than CCDIR and the logs directory doesn't exist in the local directory.
 
+documentation
+----------------------
+* Add more explaination to ldapmapper (CC-870). Patch by Florian Rosenauer
+
 build loop
 ======================
 
